$Id: CHANGES,v 1.223 2003/03/31 09:42:54 stelian Exp $

Changes between versions 0.4b33 and 0.4b34 (released ?????????????????)
=======================================================================

1.	Fixed the INSTALL file to reflect the actual install paths.
	Thanks to David Ronis <ronis@ronispc.chem.mcgill.ca> for
	reporting the bug.

2.	Fixed the configure script to only check for headers presence
	instead of trying to compile them. This should fix issues
	with old build environments. Thanks to Kari Lempiainen 
	<kari@funky.pp.fi> for reporting the bug.

3.	Fixed restore to correctly ignore sockets when comparing
	a dump (as socket cannot be properly restored anyway). Thanks
	to Gunther Reiszig <gunther@mit.edu> for reporting the bug.

4.	Fixed restore to correctly access the archive file (-A argument)
	even when using a remote tape. Thanks to Fabrice Bellet 
	<fabrice@bellet.info> for reporting the bug.

5.	Fixed (again) handling of long (largefile) seeks in rmt.
	Thanks to Fabrice Bellet <fabrice@bellet.info> for reporting
	the bug.

6.	Fixed restore corner case when dealing with large block sizes
	dump is able to write now (-b 1024). Thanks to Fabrice Bellet
	<fabrice@bellet.info> for reporting the bug.

7.	Fixed a bug preventing dump to access a filesystem having 
	a label exactly 16 bytes in length. Thanks to <minduni@ti-edu.ch>
	for reporting the bug.

8.	Made dump store dump dates using explicit timezones, fixing a
	problem with incremental dumps if the timezone is modified 
	between the dumps. Thanks to Philippe Troin <phil@fifi.org> for
	the bug report and the patch.

9.	Fixed a bug encountered when dumping individual files (not full
	filesystems or directories) and dangling symbolic links happen
	to be in the list of files. For as far as dump is concerned,
	dangling symbolic links are allowed, and are dumped as is.
	Thanks to Jin-su Ahn <jsahn@ee.snu.ac.kr> for reporting the
	bug and providing the fix.
